Making function for showing books on the page in a table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+
+        <div class="container">
+            <table class="main-table">
+                 <tr>
+                    <th>Name</th>
+                    <th>Author</th>
+                    <th>Pages </th>
+                    <th>Read</th>
+                </tr>   
+               
+            </table>
+        </div>
         <script src="script.js" async defer></script>
     </body>
 </html>
