Fixing adding books to library, getting data from the form  and properly displaying books in a table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
                 </tr>   
                
             </table>
+            <button class="show-form-button">Show form</button>
+            <form class="book-form" hidden="true">
+                <label for="name">Name</label><br>
+                <input type="text" id="name" name="name"><br>
+                <label for="Author">Author</label><br>
+                <input type="text" id="author" name="author"><br>
+                <label for="Pages">Pages</label><br>
+                <input type="text" id="pages" name="pages"><br>
+                <label for="read">Read</label><br>
+                <input type="checkbox" id="read" name="read" value="yes" ><br>
+            </form>
+                <button class="add-book-button" type="text" >Add book to the library</button>
+
         </div>
         <script src="script.js" async defer></script>
     </body>
