Changing table style in css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="checkbox" id="read" name="read" value="yes" ><br>
             </form>
                 <button class="add-book-button" type="text" >Add book to the library</button>
-            <h3 id="error-heading" hidden>One or many fields are empty!</h3>
+            <h3 id="error-heading" >One or many fields are empty!</h3>
         </div>
         <script src="script.js" async defer></script>
     </body>
